[tool]

[tool.poetry]
name = "risk-targeted-hazard"
description = "Risk Targeted Hazard"
version = "0.1.0"
authors = ["Anne Hulsey <anne.hulsey@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
numba = "*"
scipy = "*"
h5py = "*"
pandas = "*"
matplotlib = "*"
toshi_hazard_store = "*"
joblib = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
notebook = "*"
mypy = "*"
ipdb = "*"
